style.css
html{
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: roboto, sans-serif;
    height: 100vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
}

ul {
    margin: 0px;
    padding: 0px;
    list-style-type: none;
    display: flex;
    justify-content: end;
}

button {
    border: none;
    border-radius: 4px;
    max-width: 100px;
    padding: 8px 16px;
    color: white;
    border: 1px white solid;
}

h2 {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 16px;
}

.logo,
ul{
    flex: 1;
    gap: 8px;
}

.logo {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
}

.hero,
.footer {
    background-color: #1F2937;
    width: 100%;
}

.hero{
    justify-content: center;
}

.hero-container {
    width: 920px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 40px;
}

.hero-bottom {
    display: flex;
    justify-content: space-between;
    margin: 120px 0px;
    gap: 60px;
}

.hero-left {
    display: flex;
    flex-direction: column;
    width: 50%;
    gap: 16px;
    flex: 0 1 auto;
}

.hero-left p {
    margin: 0px;
}

.hero-left button{
    border: none;
}

.main-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

a,
.secondary-text,
.footer {
    font-size: 18px;
    color: #E5E7EB;
    text-decoration: none;
}

.placeholder {
    background-color: grey;
    width: 50%;
    flex: 0 1 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #F9FAF8;
}

.quote {
    background-color: #E5E7EB;
    width: 100%;
}

button,
.cta {
    background-color: #3882F6;
}

.hero,
.information,
.quote,
.cta {
    display: flex;
    flex: 1 1 auto;
}

.cta {
    justify-content: space-between;
    align-items: center;
    padding: 32px 80px;
    width: 820px;
    border-radius: 8px;
    margin: 60px 0px;
    color: #F9FAF8;
}

.cta-left p{
    margin: 0px;
    color: #E5E7EB;
}

.quote,
.information {
    flex-direction: column;
    display: flex;
    justify-content: center;
    align-items: center;
}

.quote {
    font-size: 36px;
    color: #1F2937;
}

.quote-container{
    flex: 1 1 auto;
}

.quote p {
    width: 820px;
}

.quote-reference{
    margin-left: auto;
}

.information {
    text-align: center;
}

.cards {
    display: flex;
    gap: 32px
}

.card {
    width: 150px;
    flex: 1 0 auto;
}

.card-placeholder{
    width: 150px;
    height: 150px;
    border: 4px solid #3882F6;
    border-radius: 10px;
}

.footer {
    flex: 0 0 auto;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}

